# momclaw

./: .gitignore  .gitleaks.toml  AGENT1_BRIDGE_AGENT_COMPLETION.md  AGENT3_FIX_APPLIED.md  AGENT3_INTEGRATION_TEST_RESULT.md  AGENT3_SUMMARY.md  AGENT4_COMpletion.md  AGENT4_DOCUMENTATION_BUILD_REPORT.md  AGENT4_FINAL_PRODUCTION_READINESS_REPORT.md  AGENT4_FINAL_REPORT.md  AGENT4_TASK_COMPLETION_SUMMARY.md  AGENT4_TASK_SUMMARY.md  API_DOCUMENTATION.md  AUDIT_REPORT.md  BRIDGE-AGENT-REVIEW.md  BRIDGE_AGENT_V1.0.0_VERIFICATION_REPORT.md  BRIDGE_AGENT_VERIFICATION_FINAL.md  BUILD-COMPLETE.md  BUILD-DEPLOYMENT-GUIDE.md  BUILD.md  BUILD_CONFIGURATION.md  BUILD_DEPLOYMENT_FINAL_AUDIT.md  BUILD_OPTIMIZATION.md  BUILD_OPTIMIZATION_REPORT.md  CHANGELOG.md  COMPLETION-REPORT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_AUTOMATION_GUIDE.md  DEPLOYMENT_GO.md  DEPLOYMENT_GO_LIVE.md  DEPLOYMENT_READINESS_CHECKLIST.md  DEPLOYMENT_READINESS_FINAL_REPORT.md  DEPLOYMENT_READINESS_REPORT.md  DEVELOPMENT.md  DEVELOPMENT_COMPLETION_REPORT.md  DEVELOPMENT_ITERATION_STATUS_REPORT.md  DISCORD_DEPLOYMENT_REPORT.md  DOCUMENTATION-INDEX.md  DOCUMENTATION.md  (+98 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECRETS_SETUP.md  WORKFLOWS_GUIDE.md  dependabot.yml  release.md
android/: BRIDGE-AGENT-VERIFICATION.md  BUILD.md  COMPILATION_FIXES_APPLIED.md  DEPENDENCIES.md  FINAL_IMPLEMENTATION_REPORT.md  Gemfile  IN-test-report.md  INTEGRATION_TEST_REPORT.md  INTEGRATION_TEST_SUMMARY.md  MODULE-VERIFICATION-REPORT.md  README.md  RELEASE_CHECKLIST.md  (+11 more)
android/app/src/main/cpp/: CMakeLists.txt
(+292 files in other folders)
